<resources>
    <string name="app_name">PriVELT</string>

    <string name="weak">Weak</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very strong</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="change_master_password">Change master password</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="check">Check</string>
    <string name="settings">Settings</string>

    <string name="services">Services</string>
    <string name="permissions">Permissions</string>
    <string name="risk_value">Risk value</string>
    <string name="user">User</string>

    <!--CardFragment -->
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribe_confirmation">Are you sure you want to unsubscribe to this service?</string>
    <string name="choose_service">Choose the service you want to connect to</string>
    <string name="choose">Continue</string>
    <string name="authorize_save_password">You did not authorize us to save your password, we cannot process to data extraction.</string>
    <string name="privacy_value_risk">Privacy-Value risk</string>
    <string name="overlay_permission">"Display Over App" permission is required for our app Data Extraction mechanism while it\'s in the background.</string>
    <string name="data_extraction">Permission Required</string>
    <string name="global_privacy_value">Privacy risk : %1$s</string>
    <string name="filter">filter</string>
    <string name="choose_cards">Choose the cards you want on your dashboard</string>
    <string name="already_added_all">You already added all supported services</string>

    <!--DataMetricsAdapter -->
    <string name="information_found">%1$d different @plural(%1$d,%2$s)@ found</string>
    <string name="information_found_total">%1$d different @plural(%1$d,information)@ found</string>
    <string name="no_data">No chart data available yet</string>

    <!--DataActivity -->
    <string name="extracting">Extracting: %1$s</string>
    <string name="logged">Logged</string>
    <string name="logging_in">Logging in</string>
    <string name="percent">%1$d%%</string>
    <string name="no_service">You did not connect to any service</string>

    <!-- LoginActivity -->
    <string name="login_success">Login success</string>
    <string name="email_or_password_empty">Please enter an mail with a password</string>
    <string name="choose_script_empty">Please choose at least one extraction method</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_password">Store password to enable auto extraction</string>
    <string name="test_connection">Test connection</string>
    <string name="remember_password_error">Without remember password we can\'t process extraction for now</string>

    <!--MasterPasswordActivity -->
    <string name="reset_confirmation">Resetting all your stored data</string>
    <string name="process_confirmation">Are you sure you want to proceed?</string>
    <string name="reset_done">All your data has been deleted you should restart the application</string>
    <string name="different_password">Passwords are not the same</string>
    <string name="not_respect_policy">You did not respect the password policy</string>
    <string name="wrong_password">Wrong password, you can reset all your data to enter a new password</string>
    <string name="same_password">The password is the same as before</string>
    <string name="title_master_password">Please choose a master password to be used to encrypt your data in our app</string>
    <string name="reset_data">Delete all your information</string>
    <string name="password_policy">Master password must be at least 8 characters, with at least 1 uppercase letter, 1 lowercase letter, 1 number and 1 special character. The password strength should be at least "Strong"</string>
    <string name="master_password">Master password</string>
    <string name="confirm_master_password">Confirm master password</string>
    <string name="start_master_button">Continue</string>
    <string name="import_your_data">Import your data</string>
    <string name="enter_file_id">Enter your Google Drive file id</string>
    <string name="data_imported_correctly">Your data has been imported correctly</string>
    <string name="error_occurred">An error occurred</string>

    <!--SettingsActivity-->
    <string name="log_out">Log out</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="script_title">Select the different data you particularly care about :</string>
    <string name="no_data_extracted_yet">No data extracted yet</string>
    <string name="save_data_on_google_drive">Auto-save on Google Drive</string>
    <string name="save_data_on_hat">Save on HAT</string>
    <string name="here_will_be_the_file_id">Here will be the file id</string>
    <string name="enter_email">Please enter your email</string>
    <string name="save_data">Saving your data on one of the following service can be useful to retrieve your database on another device.</string>
    <string name="logged_with">Logged as %1$s</string>

    <!--UserFragment-->
    <string name="mail">Email</string>
    <string name="phone_number">Mobile number</string>
    <string name="address">Home address</string>
    <string name="birthday">Date of birth</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="personal_data">Personal data</string>
    <string name="personal_data_explain">In order to get a more accurate value of your privacy risk, please provide your personal data below so we can check if the collected data through your connected services correspond to your actual real data.</string>
    <string name="edit">edit</string>
    <string name="overall_risk">Your overall risk for this service is %1$s</string>
    <string name="found">found</string>
    <string name="data_found">%1$d different</string>

    <!--DetailedCardActivity-->
    <string name="data_explained">You can click on an item to see the list of data you shared</string>

    <!--DetailedSensorActivity-->
    <string name="permission_list_explained">Here is the list of all your installed applications using this permission</string>
    <string name="sensor_off_info">If \"Off\" is written the sensor were not activated</string>
    <string name="sensor_chart_activity">Granted permissions</string>
    <string name="number_app">There are %1$d installed applications on this device</string>
    <string name="choose_service_import">Choose which service will import your data</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="access_token">Access token</string>
    <string name="email">Email</string>
    <string name="profile">Profile details</string>
    <string name="save">Save</string>
    <string name="please_enter_file_id">Please enter your file id</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="file_id">File ID</string>
    <string name="continue_string">Continue</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>

    <!--Sensors-->
</resources>
